--- a/tests/config/packages/doctrine.yaml
+++ b/tests/config/packages/doctrine.yaml
@@ -29,8 +29,8 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                type: yml
-                dir: '%kernel.project_dir%/tests/config/doctrine'
+                type: annotation
+                dir: '%kernel.project_dir%/tests/src/Entity'
                 prefix: 'App\Entity'
                 alias: AppBundle
         #query_cache_driver: apcu
