--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/",
-            "Fi\\ProvaBundle\\": "tests/src/Fi/ProvaBundle"
+            "Tests\\": "tests/"
         }
     },
     "require": {
@@ -54,7 +53,6 @@
         "symfony/flex": "^1.0",
         "symfony/form": "3.4.*",
         "symfony/lock": "3.4.*",
-        "symfony/maker-bundle": "1.5.*",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "3.4.*",
