--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ services:
 # Configure different DB environments
 env:
   - DB=mysql BROWSER=chrome
+  - DB=mysql BROWSER=firefox
   - DB=pgsql BROWSER=chrome
+  - DB=pgsql BROWSER=firefox
   - DB=sqlite3 BROWSER=chrome
+  - DB=sqlite3 BROWSER=firefox
   
 #sudo: required
 #dist: trusty
@@ -86,7 +89,7 @@ before_script:
   #- if [[ "$BROWSER" == "chrome" ]]; then sudo cat $TRAVIS_BUILD_DIR/tests/app/config/parameters.yml; fi
   #- if [[ "$BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/local/bin; fi
   
-  #- if [[ "$BROWSER" == "firefox" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.19.1/geckodriver-v0.19.1-linux64.tar.gz && tar -xzf geckodriver-v0.19.1-linux64.tar.gz && sudo mv geckodriver /usr/local/bin; fi
+  - if [[ "$BROWSER" == "firefox" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz && tar -xzf geckodriver-v0.19.1-linux64.tar.gz && sudo mv geckodriver /usr/local/bin; fi
 
   
   - "export DISPLAY=:99.0"
