--- a/.travis.yml
+++ b/.travis.yml
@@ -106,6 +106,7 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then cp -f ./tests/build/build.hhvm.xml $TRAVIS_BUILD_DIR/build.xml; fi
   
   - if [[ "$BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/tests/config/packages/test/testdriver.yaml; fi
+  - if [[ "$BROWSER" == "firefox" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz && tar -xzf geckodriver-v0.24.1-linux64.tar.gz && sudo mv geckodriver /usr/local/bin; fi
   - chmod +x bin/console
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
