--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: php
 
 php:
   - 7.2
-  #- hhvm-3.24
 
 services:
   - mysql
@@ -10,15 +9,14 @@ services:
   
 matrix:
     allow_failures:
-        - php: hhvm-3.24
        # - php: 5.6
        #   env: BROWSER=chrome
        # - php: 7.0
        #   env: BROWSER=chrome
        # - php: 7.1
        #   env: BROWSER=chrome
-       # - php: 7.2
-       #   env: BROWSER=chrome
+       - php: 7.2
+         env: BROWSER=firefox
     exclude:
     #- php: hhvm
     #  env: DB=pgsql
@@ -109,7 +107,7 @@ before_script:
 
 script:
   #- if [[ ! $TRAVIS_PHP_VERSION=~ ^hhvm ]]; then ant; fi
-  - ant
+  - travis_wait 40 ant
 
 after_success:
   - if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then php vendor/bin/php-coveralls -v; fi
