fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ php:
 
 services:
   - mysql
-  - pgsql
+  - postgresql
+  - xvfb
   
 matrix:
     allow_failures:
@@ -51,7 +52,7 @@ addons:
 
 before_script:
   - sudo apt-get update
-  - sudo apt-get install apache2 libapache2-mod-fastcgi make
+  - sudo apt-get install apache2 libapache2-mod-fastcgi make ant
   
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then echo -e '\nhhvm.libxml.ext_entity_whitelist = "file,http,https"' | sudo tee -a /etc/hhvm/php.ini; fi
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then echo -e '\nhhvm.enable_zend_compat=true' | sudo tee -a /etc/hhvm/php.ini; fi
@@ -106,11 +107,8 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then cp -f ./tests/build/build.hhvm.xml $TRAVIS_BUILD_DIR/build.xml; fi
   
   - if [[ "$BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/tests/config/packages/test/testdriver.yaml; fi
-  - if [[ "$BROWSER" == "firefox" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz && tar -xzf geckodriver-v0.24.1-linux64.tar.gz && sudo mv geckodriver /usr/local/bin; fi
+  - if [[ "$BROWSER" == "firefox" ]]; then wget -O geckodriver-linux64.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz && tar -xzf geckodriver-linux64.tar.gz && sudo mv geckodriver /usr/local/bin; fi
   - chmod +x bin/console
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
   
 
 script:
