--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
 services:
   - mysql
   - pgsql
+  - xvfb
   
 # Configure different DB environments
 env:
@@ -90,11 +91,6 @@ before_script:
   #- if [[ "$BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/local/bin; fi
   
   - if [[ "$BROWSER" == "firefox" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz && tar -xzf geckodriver-v0.24.0-linux64.tar.gz && sudo mv geckodriver /usr/local/bin; fi
-
-  
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
 
   
 
