--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
 
 services:
   - mysql
-  - pgsql
+  - postgresql
   - xvfb
   
 matrix:
@@ -44,11 +44,11 @@ cache:
 addons:
   #firefox: "45.8.0esr"
   firefox: "latest"
-  chrome: stable
+  chrome: "latest"
 
 before_script:
   - sudo apt-get update
-  - sudo apt-get install apache2 libapache2-mod-fastcgi make
+  - sudo apt-get install apache2 libapache2-mod-fastcgi make ant
   
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then echo -e '\nhhvm.libxml.ext_entity_whitelist = "file,http,https"' | sudo tee -a /etc/hhvm/php.ini; fi
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then echo -e '\nhhvm.enable_zend_compat=true' | sudo tee -a /etc/hhvm/php.ini; fi
