--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ php:
 
 services:
   - mysql
-  - pgsql
+  - postgresql
+  - xvfb
   
 matrix:
     allow_failures:
@@ -42,7 +43,7 @@ before_script:
   - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\ndate.timezone = "Europe/Rome"' | sudo tee -a /etc/hhvm/php.ini; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then echo -e '\nhhvm.enable_hip_hop_syntax = true' | sudo tee -a /etc/hhvm/php.ini; fi
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then echo 'date.timezone = "Europe/Rome"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
-  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo apt-get install -y --force-yes php5-dev php-pear php5-mysql php5-curl php5-gd php5-json php5-sqlite php5-pgsql; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo apt-get install -y --force-yes php56-dev php-pear php56-mysql php56-curl php56-gd php56-json php56-sqlite php56-pgsql; fi
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf; fi
   - if [[ $TRAVIS_PHP_VERSION == "7.0" ]]; then sudo cp ./tests/build/www.conf ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/; fi
   - if [[ $TRAVIS_PHP_VERSION == "7.1" ]]; then sudo cp ./tests/build/www.conf ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/; fi
@@ -77,9 +78,6 @@ before_script:
   - if [[ "$DB" == "sqlite3" ]]; then echo "PROVISIONING WITH Sqlite3"; fi
   - if [[ "$DB" == "sqlite3" ]]; then cp -f ./tests/build/parameters.sqlite.yml $TRAVIS_BUILD_DIR/app/config/parameters.yml; fi
   
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
   - composer install
   # - php bin/console fifree2:install admin admin admin@admin.it --env=test
   # - php bin/console server:start --env=test
