--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.6
   - 7.2
 
 services:
@@ -9,15 +8,21 @@ services:
   - postgresql
   - xvfb
   
-# Configure different DB environments
-env:
-  - DB=mysql BROWSER=chrome
-  - DB=mysql BROWSER=firefox
-  - DB=pgsql BROWSER=chrome
-  - DB=pgsql BROWSER=firefox
-  - DB=sqlite3 BROWSER=chrome
-  - DB=sqlite3 BROWSER=firefox
-  
+matrix:
+    fast_finish: true
+    include:
+        - php: 7.2
+          env: DB=mysql BROWSER=chrome
+        - php: 7.2
+          env: DB=pgsql BROWSER=chrome
+        - php: 7.2
+          env: DB=sqlite3 BROWSER=chrome
+          
+    allow_failures:
+        #Sqlite fails on comparision date (equals)
+        - php: 7.2
+          env: DB=sqlite3 BROWSER=chrome
+
 #sudo: required
 #dist: trusty
 cache:
