--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
         "facebook/webdriver": "^1.6",
         "mockery/mockery": "^0.9.5",
         "php-coveralls/php-coveralls": "^2.0",
-        "phpmd/phpmd": "^2.6",
+        "phpmd/phpmd": "2.7.*",
         "se/selenium-server-standalone": "3.8.*",
         "sebastian/phpcpd": "^3.0",
         "sensiolabs/security-checker": "^5.0",
