--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
         "phpoffice/phpexcel": "^1.8",
         "phpoffice/phpword": "^0.13.0",
         "sebastian/phpcpd": "^2.0",
-        "phpmd/phpmd": "^2.4",
+        "phpmd/phpmd": "2.7.*",
         "squizlabs/php_codesniffer": "^2.7",
         "satooshi/php-coveralls": "^2.0",
         "tecnickcom/tcpdf": "^6.2"
