--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "squizlabs/php_codesniffer": "^2.7",
         "symfony/browser-kit": "3.4.*",
         "symfony/css-selector": "3.4.*",
-        "symfony/phpunit-bridge": "^3.0|^4.0",
+        "symfony/phpunit-bridge": "^3.0|^4.0|^5.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/var-dumper": "3.4.*",
         "symfony/web-server-bundle": "3.4.*"
