--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,8 @@
         "php": ">=7.2",
         "fi/osbundle": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0",
-        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
-        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
+        "mysql-workbench-schema-exporter/doctrine2-exporter": "3.0.*",
+        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "3.0.*",
         "phpoffice/phpspreadsheet": "^1.4",
         "sensio/distribution-bundle": "^5.0",
         "symfony/asset": "3.4.*",
