--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,8 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "fi/osbundle": "~2.0",
-        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
-        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
+        "mysql-workbench-schema-exporter/doctrine2-exporter": "3.0.*",
+        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "3.0.*",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
