--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
         "doctrine/doctrine-bundle": "^1.9",
         "fi/osbundle": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0",
-        "mysql-workbench-schema-exporter/doctrine2-exporter": "^3.0",
-        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "^3.0",
+        "mysql-workbench-schema-exporter/doctrine2-exporter": "3.0.*",
+        "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "3.0.*",
         "phpoffice/phpexcel": "^1.8",
         "sensio/distribution-bundle": "^5.0",
         "symfony/asset": "3.4.*",
