--- a/composer.json
+++ b/composer.json
@@ -66,12 +66,12 @@
     },
     "require-dev": {
         "enm1989/chromedriver": "^2.42",
-        "facebook/webdriver": "^1.6",
+        "php-webdriver/webdriver": "^1.8",
         "php-coveralls/php-coveralls": "^2.0",
         "phpmd/phpmd": "2.7.*",
         "se/selenium-server-standalone": "3.8.*",
         "sebastian/phpcpd": "^3.0",
-        "sensiolabs/security-checker": "^5.0",
+        "sensiolabs/security-checker": "^6.0",
         "squizlabs/php_codesniffer": "^2.7",
         "symfony/browser-kit": "3.4.*",
         "symfony/css-selector": "3.4.*",
