--- a/composer.json
+++ b/composer.json
@@ -70,13 +70,13 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "enm1989/chromedriver": "^2.42",
         "enm1989/geckodriver": "^0.20.0",
-        "facebook/webdriver": "^1.6",
+        "php-webdriver/webdriver": "^1.8",
         "mockery/mockery": "^0.9.5",
         "php-coveralls/php-coveralls": "^2.0",
         "phpmd/phpmd": "2.7.*",
         "se/selenium-server-standalone": "3.8.*",
         "sebastian/phpcpd": "^3.0",
-        "sensiolabs/security-checker": "^5.0",
+        "sensiolabs/security-checker": "^6.0",
         "squizlabs/php_codesniffer": "^2.7",
         "symfony/browser-kit": "3.4.*",
         "symfony/css-selector": "3.4.*",
