--- a/composer.json
+++ b/composer.json
@@ -65,10 +65,10 @@
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0|^4.0|^5.0",
-        "sensiolabs/security-checker": "^5.0",
+        "sensiolabs/security-checker": "^6.0",
         "se/selenium-server-standalone": "3.8.*",
         "symfony/web-server-bundle": "3.4.*",
-        "facebook/webdriver": "^1.5",
+        "php-webdriver/webdriver": "^1.8",
         "enm1989/chromedriver": "^2.35",
         "mockery/mockery": "^0.9.5",
         "phpoffice/phpexcel": "^1.8",
