try upgrade symfony 4.4

--- a/tests/config/packages/doctrine.yaml
+++ b/tests/config/packages/doctrine.yaml
@@ -35,4 +35,4 @@ doctrine:
                 alias: AppBundle
         #query_cache_driver: apcu
         #metadata_cache_driver: apcu
-        result_cache_driver: apcu
+        #result_cache_driver: apcu
