--- a/composer.json
+++ b/composer.json
@@ -41,27 +41,25 @@
     "require": {
         "php": ">=7.2",
         "fi/osbundle": "~2.0",
-        "friendsofsymfony/user-bundle": "~2.0",
+        "kimai/user-bundle": "^1.2",
         "mysql-workbench-schema-exporter/doctrine2-exporter": "3.0.*",
         "mysql-workbench-schema-exporter/mysql-workbench-schema-exporter": "3.0.*",
         "phpoffice/phpspreadsheet": "^1.4",
-        "sensio/distribution-bundle": "^5.0",
-        "symfony/asset": "3.4.*",
-        "symfony/console": "3.4.*",
-        "symfony/dotenv": "3.4.*",
+        "symfony/asset": "4.4.*",
+        "symfony/console": "4.4.*",
+        "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.0",
-        "symfony/form": "3.4.*",
-        "symfony/framework-bundle": "3.4.*",
-        "symfony/lock": "3.4.*",
+        "symfony/form": "4.4.*",
+        "symfony/framework-bundle": "4.4.*",
+        "symfony/lock": "4.4.*",
         "symfony/maker-bundle": "^1.7",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
-        "symfony/security-bundle": "3.4.*",
+        "symfony/security-bundle": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "3.4.*",
-        "symfony/twig-bundle": "3.4.*",
-        "symfony/validator": "3.4.*",
-        "symfony/yaml": "3.4.*",
+        "symfony/translation": "4.4.*",
+        "symfony/validator": "4.4.*",
+        "symfony/yaml": "4.4.*",
         "tecnickcom/tcpdf": "^6.2"
     },
     "require-dev": {
@@ -70,15 +68,15 @@
         "php-coveralls/php-coveralls": "^2.0",
         "phpmd/phpmd": "2.7.*",
         "se/selenium-server-standalone": "3.8.*",
-        "sebastian/phpcpd": "^3.0",
+        "sebastian/phpcpd": "^4.0",
         "sensiolabs/security-checker": "^6.0",
         "squizlabs/php_codesniffer": "^2.7",
-        "symfony/browser-kit": "3.4.*",
-        "symfony/css-selector": "3.4.*",
+        "symfony/browser-kit": "4.4.*",
+        "symfony/css-selector": "4.4.*",
         "symfony/phpunit-bridge": "^3.0|^4.0|^5.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "3.4.*",
-        "symfony/web-server-bundle": "3.4.*"
+        "symfony/var-dumper": "4.4.*",
+        "symfony/web-server-bundle": "4.4.*"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -107,11 +105,15 @@
     },
     "bin": ["check-src"],
     "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "4.4.*"
+        },
         "public-dir": "tests/public",
         "conf-dir": "tests/conf",
         "config-dir": "tests/config",
         "branch-alias": {
-            "dev-master": "3.1-dev"
+            "dev-master": "5.0-dev"
         }
     }
 }
