--- a/src/Fi/CoreBundle/Resources/config/routing.yml
+++ b/src/Fi/CoreBundle/Resources/config/routing.yml
@@ -38,25 +38,10 @@ FiCoreBundle_menuApplicazione:
   resource: "@FiCoreBundle/Resources/config/routing/menuapplicazione.yml"
   prefix: /MenuApplicazione
 
+# Expose security related features like login and logout
 fos_user_security:
+    prefix: /
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
-
-fos_user_profile:
-    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
-
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
-
-fos_user_resetting:
-    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /resetting
-
-fos_user_change_password:
-    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /profile
-
 
 FiCoreBundle_Storicomodifiche: 
   resource: "@FiCoreBundle/Resources/config/routing/storicomodifiche.yml"
