--- a/tests/config/services.yaml
+++ b/tests/config/services.yaml
@@ -1,7 +1,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: it
+    locale: en
     appname: fifreecorebundle
     appid_applicativo: 999
     solosso: false
@@ -9,14 +9,6 @@ parameters:
     temascelto: "%env(resolve:temascelto)%"
     browser4test: firefox
 
-fos_user:
-    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
-    firewall_name: main
-    user_class: Fi\CoreBundle\Entity\Operatori
-    from_email:
-        address: "%env(resolve:mailer_user)%"
-        sender_name: "%env(resolve:mailer_user)%"
-        
 services:
     # default configuration for services in *this* file
     _defaults:
